cluster/apps/shared/ingress/hypermind-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hypermind-authentik-forward-auth
  namespace: other
spec:
  type: ExternalName
  externalName: authentik-server.identity.svc.cluster.local
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hypermind-authentik-outpost
  namespace: other
spec:
  type: ExternalName
  externalName: authentik-server.identity.svc.cluster.local
  ports:
    - name: http
      port: 80
      targetPort: 80
