cluster/apps/shared/ingress/collabora.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collabora
  namespace: productivity
  labels:
    security.rcrumana.xyz/exposure: private
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/timeout-client: "600s"
    haproxy-ingress.github.io/timeout-server: "600s"
    haproxy-ingress.github.io/allowlist-source-range: "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8,100.64.0.0/10"
spec:
  ingressClassName: haproxy-restricted
  tls:
    - hosts:
        - collabora.rcrumana.xyz
      secretName: collabora-rcrumana-xyz-tls
  rules:
    - host: collabora.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collabora
                port:
                  number: 9980
