cluster/apps/shared/ingress/gitea.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: development
  labels:
    security.rcrumana.xyz/exposure: public
    security.rcrumana.xyz/public-approved: "true"
    security.rcrumana.xyz/public-edge: direct
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/timeout-client: "600s"
    haproxy-ingress.github.io/timeout-server: "600s"
    haproxy-ingress.github.io/proxy-body-size: "0"
    haproxy-ingress.github.io/allowlist-source-range: "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8,100.64.0.0/10"
spec:
  ingressClassName: haproxy-restricted
  tls:
    - hosts:
        - git.rcrumana.xyz
      secretName: gitea-tls
  rules:
    - host: git.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea-http
                port:
                  number: 3000
