cluster/apps/shared/ingress/homepage-client.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-client
  namespace: productivity
  labels:
    security.rcrumana.xyz/exposure: private
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/affinity: "cookie"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/auth-url: "svc://identity/authentik-server:9000/outpost.goauthentik.io/auth/nginx"
    haproxy-ingress.github.io/auth-signin: "https://dashboard.rcrumana.xyz/outpost.goauthentik.io/start?rd=https://dashboard.rcrumana.xyz%[url]"
    haproxy-ingress.github.io/auth-method: "GET"
    haproxy-ingress.github.io/auth-headers-request: "Cookie,X-Forwarded-Host,X-Forwarded-Proto,X-Original-URL,X-Original-Method,User-Agent,Accept"
    haproxy-ingress.github.io/auth-headers-succeed: "X-authentik-username,X-authentik-groups,X-authentik-entitlements,X-authentik-email,X-authentik-name,X-authentik-uid,X-authentik-meta-app,X-authentik-meta-provider,X-authentik-meta-outpost,X-authentik-meta-version"
    haproxy-ingress.github.io/session-cookie-domain: "dashboard.rcrumana.xyz"
    haproxy-ingress.github.io/session-cookie-name: "homepage-client"
    haproxy-ingress.github.io/ssl-redirect: "true"
    haproxy-ingress.github.io/allowlist-source-range: "192.168.0.0/16,172.16.0.0/12,10.0.0.0/8,100.64.0.0/10"
    haproxy-ingress.github.io/config-backend-early: |
      http-request set-header X-Forwarded-Host %[req.hdr(host)]
      http-request set-header X-Forwarded-Proto https
      http-request set-header X-Original-Method %[method]
      http-request set-header X-Original-URL https://%[req.hdr(host)]%[url]
    haproxy-ingress.github.io/config-backend: |
      http-response set-header X-Robots-Tag "noindex, nofollow"
spec:
  ingressClassName: haproxy-restricted
  tls:
    - hosts:
        - dashboard.rcrumana.xyz
      secretName: dashboard-rcrumana-xyz-tls
  rules:
    - host: dashboard.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage-client
                port:
                  number: 80
