cluster/apps/shared/ingress/jellyfin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
  labels:
    security.rcrumana.xyz/exposure: public
    security.rcrumana.xyz/public-approved: "true"
    security.rcrumana.xyz/public-edge: direct
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/timeout-client: "600s"
    haproxy-ingress.github.io/timeout-server: "600s"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - jellyfin.rcrumana.xyz
      secretName: jellyfin-rcrumana-xyz-tls
  rules:
    - host: jellyfin.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
