cluster/apps/shared/ingress/jellyseerr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: media
  labels:
    security.rcrumana.xyz/exposure: public
    security.rcrumana.xyz/public-approved: "true"
    security.rcrumana.xyz/public-edge: direct
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/timeout-client: "600s"
    haproxy-ingress.github.io/timeout-server: "600s"
spec:
  ingressClassName: haproxy
  tls:
    - hosts: [ "jellyseerr.rcrumana.xyz" ]
      secretName: jellyseerr-rcrumana-xyz-tls
  rules:
    - host: jellyseerr.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 80
