cluster/apps/shared/ingress/nextcloud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: productivity
  labels:
    security.rcrumana.xyz/exposure: public
    security.rcrumana.xyz/public-approved: "true"
    security.rcrumana.xyz/public-edge: direct
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/timeout-client: "3600s"
    haproxy-ingress.github.io/timeout-server: "3600s"
    haproxy-ingress.github.io/proxy-body-size: "0"
    haproxy-ingress.github.io/config-backend: |
      acl is_login_path path_reg -i ^/(index\.php/)?login/?$
      acl has_direct_login_parameter url_param(direct) -m found
      acl is_private_client src 192.168.0.0/16 172.16.0.0/12 10.0.0.0/8 100.64.0.0/10
      http-request deny deny_status 403 if is_login_path has_direct_login_parameter !is_private_client
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - nextcloud.rcrumana.xyz
      secretName: nextcloud-rcrumana-xyz-tls
  rules:
    - host: nextcloud.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
