cluster/apps/shared/ingress/vaultwarden.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: productivity
  labels:
    security.rcrumana.xyz/exposure: public
    security.rcrumana.xyz/public-approved: "true"
    security.rcrumana.xyz/public-edge: direct
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    haproxy-ingress.github.io/backend-protocol: "http"
    haproxy-ingress.github.io/ssl-redirect: "true"
    haproxy-ingress.github.io/timeout-client: "3600s"
    haproxy-ingress.github.io/timeout-server: "3600s"
    haproxy-ingress.github.io/config-backend: |
      acl is_admin_path path_beg -i /admin
      acl is_private_client src 192.168.0.0/16 172.16.0.0/12 10.0.0.0/8 100.64.0.0/10
      http-request deny deny_status 403 if is_admin_path !is_private_client
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - vault.rcrumana.xyz
    secretName: vaultwarden-rcrumana-xyz-tls
  rules:
  - host: vault.rcrumana.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
